<resources>
    <string name="app_name">CocoaWallet</string>
    <string name="mining_pool_address">Mining Pool Address</string>
    <string name="username">Username</string>
    <string name="cmdline">Cmdline</string>
    <string name="start">Start</string>
    <string name="help">Help</string>
    <string name="cmd">Cmd</string>
    <string name="stop">Stop</string>
    <string name="threads">Threads</string>
    <string name="max_cpu_usage">Max CPU usage</string>
    <string name="percent">percent</string>
    <string name="hpers">H/s</string>
    <string name="accepted">accepted</string>
    <string name="cpus">Cores</string>
    <string name="use_worker_id">add worker id</string>
</resources>
