<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    tools:context="com.chadananda.cocoawallet.MainActivity"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        tools:ignore="UseCompoundDrawables"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:text="@string/app_name"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:text="popup"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/screenshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:text="screenshot"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mining_pool_address"/>

    <EditText
        android:id="@+id/pool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="gulf.moneroocean.stream:10001"
        tools:ignore="Autofill,HardcodedText,LabelFor,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <CheckBox
            android:id="@+id/use_worker_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/use_worker_id"/>
    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="8AaNnN8nQUMh3XQfyt4kEt8TR7RYnowhjVynzShWwVLiR6dWdSp42YeFvouLZoui7S46xSgDxapbeS7Tdqyz7em5Chqd4HA"
        tools:ignore="Autofill,HardcodedText,LabelFor,TextFields" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threads"/>
        <EditText
            android:id="@+id/threads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3"
            android:textStyle="bold"
            tools:ignore="Autofill,HardcodedText,LabelFor,TextFields" />

        <TextView
            android:id="@+id/cpus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/max_cpu_usage"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:id="@+id/maxcpu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="80"
            android:textStyle="bold"
            tools:ignore="Autofill,HardcodedText,LabelFor,TextFields" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/speed"
            android:textColor="@android:color/black"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hpers"
            android:layout_marginRight="10dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/accepted"
            android:textColor="@android:color/black"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accepted"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:scrollbars="none">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:text="......."
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:textSize="12sp"
            android:padding="10dp"
            tools:ignore="HardcodedText"/>

        </androidx.cardview.widget.CardView>

    </ScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/background_light"
            android:text="@string/start"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:text="@string/stop"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle,RelativeOverlap,RtlHardcoded" />
    </RelativeLayout>

</LinearLayout>
